UPDATE::Linked the candidate list view with backend

--- a/src/main/resources/templates/candidates-list.html
+++ b/src/main/resources/templates/candidates-list.html
@@ -70,24 +70,30 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Western</td>
-                                        <td>Colombo</td>
-                                        <td>A - Colombo North</td>
-                                        <th>Sri Lanka Freedom Party(SLFP)</th>
-                                        <th>5</th>
-                                        <td>945465666v</td>
-                                        <td>John Smith</td>
-                                        <td>Male</td>
-                                        <td>john@gmail.com</td>
-                                        <td>+94771234567</td>
+
+                                    <tr th:id="'cn_table_row_'+${c.getId()}"
+                                        th:each="c,iterationStatus:${candidates}">
+                                        <td th:text="${iterationStatus.count}"></td>
+                                        <td th:text="${c.getPollingDivision().getProvinceDivisionName()}"></td>
+                                        <td th:text="${c.getPollingDivision().getDistrictDivisionName()}"></td>
+                                        <td th:text="${c.getPollingDivision().getPollingDivisionName()}"></td>
+                                        <td th:text="${c.getElectionParty().getNameToDisplay()}"></td>
+                                        <td th:text="${c.getElectionNumber()}"></td>
+                                        <td th:text="${c.getNic()}"></td>
+                                        <td th:text="${c.getFullName()}"></td>
+                                        <td th:text="${c.getGender()}"></td>
+                                        <td th:text="${c.getEmail()}"></td>
+                                        <td th:text="${c.getMobile()}"></td>
                                         <td>
                                             <button type="button" class="btn btn-success"
                                                     data-toggle="modal" data-target="#candidate-registration-modal"><i
                                                     class="fas fa-user-edit"></i>
                                             </button>
-                                            <button type="button" class="btn btn-danger"><i class="fa fa-trash-alt"></i></button>
+                                            <form th:action="@{/candidate-delete}" method="post">
+                                                <input type="number" name="id" hidden th:value="${c.getId()}">
+                                                <button type="submit" class="btn btn-danger"><i
+                                                        class="fa fa-trash-alt"></i></button>
+                                            </form>
                                         </td>
                                     </tr>
                                     </tbody>
