--- a/src/main/resources/templates/fragments/modal-fragments.html
+++ b/src/main/resources/templates/fragments/modal-fragments.html
@@ -233,7 +233,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="nic">Number</label>
+                        <label for="electionNumber">Number</label>
                         <input type="number" class="form-control" id="electionNumber" name="electionNumber"
                                placeholder="Enter Election umber" required>
                     </div>
